ticker: fix display of last_update on mobile devices

--- a/static/ticker/ticker.css
+++ b/static/ticker/ticker.css
@@ -90,3 +90,12 @@ table.court + table.court {
 .error {
 	color: red;
 }
+
+@media (max-width:641px)  {
+	.last_update {
+		position: fixed;
+		top:auto;
+		bottom: 0;
+		padding: 0 5px 5px 0;
+	}
+}
